--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "absen-app",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "node src/server.js",
     "client:dev": "npm --prefix client run dev",
