--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "node src/server.js",
     "client:dev": "npm --prefix client run dev",
     "build": "npm --prefix client install && npm --prefix client run build",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "migrate": "node src/db/migrate.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "bcrypt": "^5.1.1",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0"
   }
 }
